<resources>
    <string name="app_name">InCity</string>
    <string name="day1Fragment">Alex In 1 Day</string>
    <string name="day2Fragment">Alex In 2 Day</string>
    <string name="day3">Alex In 3 Day</string>
    <string name="day4">Alex In 4 Day</string>
    <string name="day5">Alex In 5 Day</string>
    <string name="day6">Alex In 6 Day</string>
    <string name="day7">Alex In 7 Day</string>
    <string name="title_activity_maps_location">Map</string>
    <string name="title_activity_navigation_for_days">NavigationForDays</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="place_name">Name:</string>
    <string name="place_Desc">Description:</string>
    <string name="place_Location">Location:</string>
    <string name="place_WorkHour">Opening Time:</string>
    <string name="place_type">Type</string>
    <string name="type_1">Historical</string>
    <string name="type_2">Entertainments/Shopping</string>
    <string name="type_3">Hotels/Restaurant</string>
    <string name="place_visit_Duration">Visit Duration Average:</string>
    <string name="plan_name">Name:</string>
    <string name="plan_startLocation">Start Location</string>
    <string name="plan_duration">Duration</string>
    <string name="facebook_app_id">516224298766361</string>
    <string name="fb_login_protocol_scheme">fb516224298766361</string>

    <string name="register_msg">We just need your registered Email  to send you password reset instructions.</string>
    <string name="loading">loading</string>
</resources>
