<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
        android:orientation="vertical"
    android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbarDetialsActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            android:titleTextColor="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
        </android.support.v7.widget.Toolbar>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linearlayoutshap">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pictureicon"
                    android:visibility="visible"
                    android:id="@+id/place_image_view" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:background="#80000000"
                            android:layout_alignParentBottom="true"
                            android:layout_toEndOf="@+id/place_image_view"
                            android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
                    >
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_menu_camera"
                                android:layout_below="@+id/place_image_view"
                                android:layout_alignParentEnd="true"
                                android:id="@+id/camera_btn" />
                    <!--android:layout_marginEnd="100dp"-->


                    <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_menu_gallery"
                                android:id="@+id/gallery_btn"
                                android:layout_below="@+id/place_image_view"
                                android:layout_toStartOf="@+id/camera_btn"
                                />
                        </LinearLayout>


            <!-- Name category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <!-- Name Label -->
                <TextView
                    android:text="@string/place_name"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.67"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    />
                <!-- Name field -->

                <EditText
                    android:id="@+id/new_place_name"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32" />
            </LinearLayout>
            <!-- Decsription category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <!-- Name Label -->
                <TextView
                    android:text="@string/place_Desc"
                    android:layout_width="wrap_content"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_weight="0.15" />
                <!-- Name field -->

                <EditText
                    android:id="@+id/new_place_desc"
                    android:layout_weight="1.77"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Location category -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2"
                            android:paddingLeft="20dp"
                            android:orientation="horizontal">
                            <!-- Name Label -->
                            <TextView
                                android:text="@string/place_Location"
                                android:layout_width="wrap_content"
                                android:layout_weight=".25"
                                android:textColor="#000"
                                android:layout_height="wrap_content"
                                />
                            <!-- Name field -->

                            <EditText
                                android:id="@+id/new_place_location"
                                android:layout_weight="1.75"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                        <!-- Hours of work category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <!-- Name Label -->
                <TextView
                    android:text="@string/place_WorkHour"
                    android:layout_width="wrap_content"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    />
                <!-- Name field -->

                <EditText
                    android:id="@+id/new_place_hourOfWork"
                    android:layout_weight="0.25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="from"
                    android:paddingStart="10dp"/>

                <TextView
                    android:text=":"
                    android:layout_width="wrap_content"
                    android:layout_weight=".25"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:id="@+id/new_place_hourOfWorkto"
                    android:layout_weight="0.25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="to"
                    android:paddingStart="10dp"/>
            </LinearLayout>
                <!-- visit duration category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:paddingLeft="20dp"
                    android:orientation="horizontal">
                    <!-- Name Label -->
                    <TextView
                        android:text="@string/place_visit_Duration"
                        android:layout_width="wrap_content"
                        android:layout_weight=".25"
                        android:textColor="#000"
                        android:layout_height="wrap_content"
                        />
                    <!-- Name field -->

                    <EditText
                        android:id="@+id/new_place_visitDuration"
                        android:layout_weight="1.75"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_type"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:text="@string/type_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_historical"
                    />

                <RadioButton
                    android:text="@string/type_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_shoping" />

                <RadioButton
                    android:text="@string/type_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_restaurant" />
            </RadioGroup>
            </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="normal"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/floating_add_new_place"
            android:layout_weight="0.77"
            app:elevation="5dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="39dp"
            android:layout_marginEnd="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:backgroundTint="?attr/colorPrimary" />

        <!--android:id="@+id/floating_add_new_place"-->
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>